# VTDelta

./: Analyse Hardware.docx  Bericht-VTDelta.docx  ControlSystem.vsdx  ControlSystem.xml  DeltaControlSystem.cpp  DeltaControlSystem.hpp  HAL-hem3.xml  HAL-ieh2.xml  How-To-Delta.docx  Pinout-EEDURO.xlsx  SafetySystem.vsdx  SafetySystem.xlsx  SafetySystem.xml  Sequencer.vsdx  Sequencer.xml  Zeitplan.xlsx  build-your-own-controller.txt  hardware.txt  todo.txt
scara1/Software/Robot-Control/: CMakeLists.txt  HalScaraConfigComedi.json  Main.cpp  Main_force.cpp  ScaraControlSystem.cpp  ScaraControlSystem.hpp  ScaraSafetyProperties.cpp  ScaraSafetyProperties.hpp  ScaraSequenceMain.cpp  ScaraSequenceMain.hpp  constants.hpp
scara1/Software/Robot-Control/control/: Filter.cpp  Filter.hpp
scara1/Software/Robot-Control/control/kinematicDynamic/: DynModell.cpp  DynModell.hpp  ScaraDirectKinematic.cpp  ScaraDirectKinematic.hpp  ScaraInverseKinematic.cpp  ScaraInverseKinematic.hpp  ScaraTransposeJacobi.cpp  ScaraTransposeJacobi.hpp
scara1/Software/Robot-Control/control/workspaceLimitation/: CartesianWorkspaceLimitation.cpp
scara1/Software/Robot-Control/force_control/: ScaraControlSystem_force.cpp  ScaraControlSystem_force.hpp  ScaraSafetyProperties_force.cpp  ScaraSafetyProperties_force.hpp  ScaraSequenceMain_force.cpp  ScaraSequenceMain_force.hpp
scara1/Software/Robot-Control/force_control/sequences/forceControl/: ForceControl.cpp  ForceControl.hpp
scara1/Software/Robot-Control/force_control/sequences/goingToReady/: GoToReady.cpp  GoToReady.hpp  HomeToReady.cpp  HomeToReady.hpp
scara1/Software/Robot-Control/force_control/sequences/moving/: Move.cpp  Move.hpp  Move_Joystick.cpp  Move_Joystick.hpp
scara1/Software/Robot-Control/joystick/: Joystick.cpp  XBoxButtons.cpp  XBoxButtons.hpp  XBoxController.hpp  XBoxInput.cpp  XBoxInput.hpp
scara1/Software/Robot-Control/sequences/goingToReady/: GoToReady.cpp  GoToReady.hpp  HomeToReady.cpp  HomeToReady.hpp
scara1/Software/Robot-Control/sequences/moving/: Move.cpp  Move.hpp  Move_Joystick.cpp  Move_Joystick.hpp
scara1/Software/Robot-Control/test/: CMakeLists.txt
scara1/Software/Robot-Control/test/axisTest/: AxisTest.cpp  AxisTest.hpp  CMakeLists.txt
scara1/Software/Robot-Control/test/data/: outputDataFramesTest.txt  outputDataFramesTest2.txt  outputDataFramesTest3.txt  outputDataFramesTest4.txt  outputDataFramesTest5.txt  refSystemOutTest.txt  refSystemOutTest2.txt  refSystemOutTest3.txt  refSystemOutTest4.txt  refSystemOutTest5.txt
scara1/Software/Robot-Control/test/encoder/: EncControlSystem.cpp  EncControlSystem.hpp  EncSafetyProperties.cpp  EncSafetyProperties.hpp  TestEncoder.cpp
scara1/Software/Robot-Control/test/endSwitches/: ESControlSystem.cpp  ESControlSystem.hpp  ESSafetyProperties.cpp  ESSafetyProperties.hpp  TestEndSwitches.cpp
scara1/Software/Robot-Control/test/forceSensor/: FSControlSystem.cpp  FSControlSystem.hpp  FSSafetyProperties.cpp  FSSafetyProperties.hpp  TestForceSensor.cpp
scara1/Software/Robot-Control/test/frames/: CMakeLists.txt  framesTest.cpp
scara1/Software/Robot-Control/test/newPathPlanner/: PPControlSystem.cpp  PPControlSystem.hpp  PPSafetyProperties.cpp  PPSafetyProperties.hpp  TestPP.cpp
scara1/Software/Robot-Control/test/pathPlanner/: CMakeLists.txt  pathPlannerTest.cpp
scara1/Software/Robot-Control/test/refSystems/: CMakeLists.txt  refSystemTest.cpp
scara1/Software/Robot-Control/test/savePoints/: CMakeLists.txt  savePointsTest.cpp
scara1/Software/Robot-Control/texass/: CMakeLists.txt  Main.cpp  ScaraControlSystem.cpp  ScaraControlSystem.hpp  ScaraSafetyProperties.cpp  ScaraSafetyProperties.hpp  ScaraSequenceMain.cpp  ScaraSequenceMain.hpp  constants.hpp  types.hpp
scara1/Software/Robot-Control/texass/control/: I.hpp  SetPlasmaPen.cpp  SetPlasmaPen.hpp
scara1/Software/Robot-Control/texass/control/kinematicDynamic/: ScaraDirectKinematic.cpp  ScaraDirectKinematic.hpp  ScaraInverseKinematic.cpp  ScaraInverseKinematic.hpp
scara1/Software/Robot-Control/texass/control/pathPlanner/: PathPlanner.cpp  PathPlanner.hpp
scara1/Software/Robot-Control/texass/joystick/: Joystick.hpp
scara1/Software/Robot-Control/texass/referenceSystems/: ScaraSequenceCalculateRefSystem.cpp  ScaraSequenceLoadRefSystem.cpp  ScaraSequenceLoadRefSystem.hpp  ScaraSequenceSaveRefSystems.hpp
scara1/Software/Robot-Control/texass/sequences/: ScaraSequenceMove.cpp  ScaraSequenceMove.hpp
scara1/Software/Robot-Control/texass/sequences/calibration/: ScaraSequenceSaveCalibratedMesh.hpp
scara1/Software/eeros/Pathplanner/: CMakeLists.txt  PathPlanner.cpp  PathPlanner.hpp  TrajectoryGenerator2.cpp  TrajectoryGenerator2.hpp  pathplannerDemo.cpp
scara2/Software/Robot-Control/: CMakeLists.txt  Hardware.cpp  Hardware.hpp  HwConfig.json  Main.cpp  constants.hpp  types.hpp  xy_ellipse.txt
scara2/Software/Robot-Control/control/: ParallelScaraControlSystem.cpp  ParallelScaraControlSystem.hpp  SetWatchdog.hpp
scara2/Software/Robot-Control/control/hallsensors/: HallPhiRotationMatrix.hpp  HallSensorsDataAcquisition.hpp
scara2/Software/Robot-Control/control/kinematic/: DirectKinematic.hpp  InverseKinematic.hpp
scara2/Software/Robot-Control/control/pathplanner/: PathPlanner.cpp  PathPlanner.hpp  PathPlannerEllipse.cpp  PathPlannerEllipse.hpp
scara2/Software/Robot-Control/control/pendulumcontrol/: AngleAccToTipAcc.hpp  AngleToTipPos.hpp  Filter.hpp  PendulumController.cpp  PendulumController.hpp  TipAccToAngle.hpp
scara2/Software/Robot-Control/control/robotcontroller/: RobotController.cpp  RobotController.hpp  SpeedSaturation.hpp
scara2/Software/Robot-Control/safety/: ParallelScaraSafetyProperties.cpp  ParallelScaraSafetyProperties.hpp
scara2/Software/Robot-Control/sequences/: Balancing.cpp  Balancing.hpp  GoToReady.cpp  GoToReady.hpp  HighSpeed.cpp  HighSpeed.hpp  Homing.hpp  MainSequence.cpp  MainSequence.hpp  Readying.hpp
scara2/Software/Robot-Control/test/hardware/: TestHardware.cpp
scara2/Software/Robot-Control/test/kinematic/: testKin.cpp
scara2/Software/Robot-Control/test/pathplanner/: testPath.cpp
(+587 files in other folders)
